Fixed frozen columns not being scrollable, fixed weird spacing on frozen columns on a veriety of browers/OSes

--- a/css/fixed_table_rc.css
+++ b/css/fixed_table_rc.css
@@ -31,7 +31,6 @@
     position: absolute;
     z-index: 956;
     top: -10px;
-    right: 13px;
 }
 
 .ft_r, .ft_c {
@@ -55,7 +54,6 @@
     padding: 0px;
     margin: 0px;
     top: 0;
-    right: 12px;
 }
 
 .ft_scroller {
